# Comment-Service

./: .gitignore  README.md  app.py  dev.db  init_db.py  pyproject.toml  render.yaml  requirements.txt  schema.sql  seed_universities.sql
app/: __init__.py  main.py
env/: .env.example  render.env
migrations/versions/: fa51c5413e13_final_correct_migration_from_a_clean_.py  ff8bdb3362b7_final_models_setup_with_correct_paths.py
static/css/: main.css  review.css  style.css
templates/: admin_base.html  admin_dashboard.html  admin_labs.html  admin_professors.html  admin_reviews.html  admin_users.html  all_reviews.html  index.html  review.html
